--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "practice",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:44334",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "final-form": "^4.20.7",
     "react": "^18.2.0",
